# SolveOneToOneMatching

./: .gitignore  ChoiceProbabilities.py  README.md  SolveMatchingModel.py  SolveOneToOneMatching.py  main.py  pyproject.toml  run.py  run_test.py
.github/workflows/: cd.yml  ci.yml  test.yml
SolveOneToOneMatching/: SolveOneToOneMatching.py
examples/: main.py
module/: DiscreteChoiceModel.py  MatchingModel.py
src/SolveOneToOneMatching/: DiscreteChoiceModel.py  MatchingModel.py
tests/: test.py  test_DiscreteChoiceModel.py  test_MatchingModel.py
