[project]
name = "SolveOneToOneMatching"
version = "0.1.47"
description = "JAX implementation of fixed-point iteration algoritm to solve one-to-one matching model with transferable utility"
authors = [
    { name="Esben Scriver Andersen", email="esbenscriver@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fxp-jax>=0.2.3",
    "jax>=0.7.0",
    "jaxopt>=0.8.5",
    "simple-pytree>=0.2.2",
    "squarem-jaxopt>=0.1.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pyright]
pythonPath = "src"

[tool.ruff]
src = ["src"]
